--- a/styles.css
+++ b/styles.css
@@ -37,10 +37,15 @@ body {
   background-image: linear-gradient(315deg, #f8ef42 0%, #0fd64f 74%);
 }
 
+.boxes {
+  /* margin-top: -100vh; */
+}
+
 /* grid-container */
 .container {
   margin: 0 auto;
   padding: 2%;
+  top: 850px;
   max-width: 100%;
   height: auto;
   position: relative;
